--- a/src/Pages/radioPage/SinglePageRadio/singlePageRadio.css
+++ b/src/Pages/radioPage/SinglePageRadio/singlePageRadio.css
@@ -35,6 +35,20 @@
   margin-left: -15px;
 }
 
+@media (max-width: 991px) {
+  .radio-showcase {
+    margin-bottom: 700px !important;
+  }
+  
+}
+
+@media (max-width: 767px) {
+  .radio-showcase {
+    margin-bottom: 900px !important;
+  }
+  
+}
+
 @media (max-width: 800px) {
   .icons-footer {
     /* text-align: center;
@@ -45,5 +59,27 @@
     /* margin-left: -15px; */
   }
   
+  
 }
 
+
+@media (max-width: 540px) {
+  .radio-showcase {
+    margin-bottom: 1200px !important;
+  }
+  
+}
+
+@media (max-width: 375px) {
+  .radio-showcase {
+    margin-bottom: 1400px !important;
+  }
+  
+}
+
+@media (max-width: 320px) {
+  .radio-showcase {
+    margin-bottom: 1600px !important;
+  }
+  
+}
