--- a/src/Assets/Css/list_radio.css
+++ b/src/Assets/Css/list_radio.css
@@ -51,10 +51,10 @@
   overflow: hidden;
 }
 
-.img-radios {
+/* .img-radios {
   width: 400px;
   height: 400px;
-}
+} */
 
 .text-radio a:after {    
   background: none repeat scroll 0 0 transparent;
