--- a/src/Pages/newsPage/news.css
+++ b/src/Pages/newsPage/news.css
@@ -15,7 +15,7 @@
   margin-bottom: 40px;
 }
 
-.news-img-horizontal, news-img-vertical {
+.news-img-horizontal, .news-img-vertical {
   width: 700px;
   height: 350px;
 }
@@ -104,7 +104,7 @@
 
 /* Kategori Cultural dan Local Values */
 .category-cultural,
-.category-local-values {
+.category-local.values {
   /* background-color: #7D5333; */
   display: inline-block;
   padding: 10px 20px;
@@ -119,7 +119,7 @@
 
 /* Efek hover */
 .category-cultural:hover,
-.category-local-values:hover {
+.category-local.values:hover {
   background-color: #7D5333;
   color: #fff !important;
 }
